# goostr

./: .gitignore  .goosehints  Cargo.toml  LICENSE  README.md  justfile
src/: cli.rs  config.rs  error.rs  follows.rs  keys.rs  lib.rs  logging.rs  main.rs  metadata.rs  nostr_client.rs  relays.rs  secrets.rs  server.rs  settings.rs  storage.rs  subscriptions.rs  util.rs
