[package]
name = "goostr"
version = "0.1.0"
edition = "2021"
description = "Codename Goose Nostr MCP extension"
license = "MIT"
repository = "https://github.com/nostr-mcp/goostr"
keywords = ["mcp", "nostr", "goose", "extension"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std", "json"] }
rmcp = { version = "0.8.1", features = ["server", "transport-io"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
