[package]
name = "goostr"
version = "0.1.0"
edition = "2021"
description = "Codename Goose Nostr MCP extension"
license = "MIT"
repository = "https://github.com/nostr-mcp/goostr"
readme = "README.md"
keywords = ["mcp", "nostr", "goose", "extension"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
keyring = "2"
nostr = { version = "0.43", features = ["nip04"] }
nostr-sdk = { version = "0.43" }
nostr-mcp-core = { path = "../nostr-mcp-rs/crates/nostr-mcp-core" }
rand = "0.8"
rmcp = { version = "0.8.1", features = ["server","macros","transport-io","schemars"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal", "time", "sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std", "json"] }
zeroize = "1.7"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
